--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Shine Beuty NYC"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo22.png" />
+    <link rel="apple-touch-icon" href="./logo22.webp" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -41,7 +41,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>SHİNE BEUTY NYC</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
